--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
       <img src="bradPhoto.jpg" width="300" height="400">
     </div>
     <div id="aboout-content">
-        <h1 class="header-tag">Brad Dozier</h1>
-        <h3 class="header-tag"><i>Web Development</i></h3>
-         <p>
-        Put a few sentences together about how I am changing careers and seeking to gain employment as a web developer. Maybe a line about where I'm coming from, then go into where I want to go and leave it there. My new skills should be highlight by the portfolio page and 
-        the projects I have links to. Put something at the bottom of each project thumbnail about which skills were used to create each project. 
-        For instance, put html, css, js logos at the bottom or top to show what was used.
+        <h1 class="header-tag">BRAD DOZIER</h1>
+        <h3 class="header-tag"><i>Aspiring Web Developer</i></h3>
+        <p>
+        Hello, and thanks for visiting my website! My name is Brad Dozier, and I am an aspiring web developer based in Indianapolis, Indiana. 
+        My current technical skills include HTML, CSS, & Javascript, and I look forward to the challenge of always continuing to add to this skillset as I begin
+        my career in web development. 
+        </p>
+        <p>
+        In addition to this expanding set of skills, my experience as a successful business owner and manager
+        with over 20 years of experience in the service industry has also enhanced many of my "soft" skills and proven that I have 
+        have the drive, dedication, & perseverence to be a successful addition to your team. 
         </p>
     <a download href="resume.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
     </div>  
@@ -70,7 +75,6 @@
         <h1 class="contact-tag">Contact Me</h1>
             <form class="contact" action="https://formspree.io/xaypnvdr" method="POST">
                 <fieldset>
-                    <legend>Contact Form</legend>
                     <p><label class ="name">Name:  <input type="text" name="name"></label></p>
                     <p><label class ="email">Email:  <input type="email" name="_replyto"></label></p>
                     <p><label class ="message">Message:  <textarea type="text" name="messsage" rows="4" cols="50"></textarea></label></p>
