--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="main">
   <section id="about">
     <div id="about-picture">
-      <img src="bradPhoto.jpg" width="300" height="400">
+      <img src="BradDozier3.jpg" width="300" height="400">
     </div>
     <div id="aboout-content">
         <h1 class="header-tag">BRAD DOZIER</h1>
@@ -45,7 +45,7 @@
         with over 20 years of experience in the service industry has also enhanced many of my "soft" skills and proven that I have 
         have the drive, dedication, & perseverence to be a successful addition to your team. 
         </p>
-    <a download href="resume.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
+    <a download href="BradDozierResume.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
     </div>  
   </section> <!--link to my resume somewhere via button or anchor link.....do it is js if possible-->    
 </div>
