--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         with over 20 years of experience in the service industry has also enhanced many of my "soft" skills and proven that I have 
         have the drive, dedication, & perseverence to be a successful addition to your team. 
         </p>
-    <a download href="BradDozierResume.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
+    <a download href="BradDozierResume720" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
     </div>  
   </section> <!--link to my resume somewhere via button or anchor link.....do it is js if possible-->    
 </div>
@@ -87,7 +87,7 @@
 <hr style="border: 1px solid #394236;" />
     <footer class="footer">
         <div id="social-btns">
-            <a href="https://www.linkedin.com/in/brad-dozier-956a09a4/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/braddozier" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
             <a href="https://github.com/braddozier93/" target="_blank"><i class="fab fa-github fa-3x"></i></a>
             <a href="https://codepen.io/braddozier/" target="_blank"><i class="fab fa-codepen fa-3x"></i></a>
         </div>
