about me update

--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
         <h1 class="header-tag">BRAD DOZIER</h1>
         <h3 class="header-tag"><i>Aspiring Web Developer</i></h3>
         <p>
-        Hello, and thanks for visiting my website! My name is Brad Dozier, and I am an aspiring web developer based in Indianapolis, Indiana. 
-        My current technical skills include HTML, CSS, & Javascript, and I look forward to the challenge of always continuing to add to this skillset as I begin
-        my career in web development. 
+        Hello, and thanks for visiting my website! My name is Brad Dozier, and I am an aspiring web developer 
+        based in Indianapolis, Indiana. As a recent graduate of Eleven Fifty Academy's Web Development program, 
+        I have gained numerous technical skills which include using HTML, CSS, Javascript, and React. This, 
+        however, is just the start of my career in web development in which I look forward to the challenge of 
+        always continuing to learn and add to this skillset.
         </p>
         <p>
         In addition to this expanding set of skills, my experience as a successful business owner and manager
         with over 20 years of experience in the service industry has also enhanced many of my "soft" skills and proven that I have 
         have the drive, dedication, & perseverence to be a successful addition to your team. 
         </p>
-    <a download href="BradDozierResume720.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
+    <a download href="BradDozierResume.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
     </div>  
   </section> <!--link to my resume somewhere via button or anchor link.....do it is js if possible-->    
 </div>
@@ -87,7 +89,7 @@
 <hr style="border: 1px solid #394236;" />
     <footer class="footer">
         <div id="social-btns">
-            <a href="https://www.linkedin.com/in/braddozier" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/brad-dozier-956a09a4/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
             <a href="https://github.com/braddozier93/" target="_blank"><i class="fab fa-github fa-3x"></i></a>
             <a href="https://codepen.io/braddozier/" target="_blank"><i class="fab fa-codepen fa-3x"></i></a>
         </div>
