replace static with pern project

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         <h1 class="portfolio-tag">Portfolio</h1>
         <div class="portfolio-cards">
             <div class="card-one">
-                <img src="CSSCreatureThumbnail.png" alt="CSS-Creature" class="img-thumbnail" width="300" height="300">
+                <img src="CSSCreatureThumbnail.png" alt="CSS-Creature" class="img-thumbnail">
                 <h2><a href="https://codepen.io/braddozier/full/KKdqVmj" target="blank">CSS CREATURE</a></h2>
             </div>
             <div class="card-two">
-                <img src="StaticLayoutThumbnail.png" alt="StaticLayout" class="img-thumbnail">
-                <h2><a href="https://braddozier93.github.io/staticWebpage/" target="blank">STATIC LAYOUT</a></h2>
+                <img src="VegLogThumbnail.png" alt="PERN-Project" class="img-thumbnail">
+                <h2><a href="https://bd-veglogapi.herokuapp.com" target="blank">FULL CRUD PERN PROJECT</a></h2>
             </div>
             <div class="card-three">
                 <img src="SongsterrAPI.png" alt="APIproject" class="img-thumbnail">
