--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h2><a href="https://codepen.io/braddozier/full/KKdqVmj" target="blank">CSS CREATURE</a></h2>
             </div>
             <div class="card-two">
-                <img src="VegLogThumbnail.png" alt="PERN-Project" class="img-thumbnail">
+                <img src="VegLogThumbnail.png" alt="PERN-Project" class="img-thumbnail" width="300">
                 <h2><a href="https://bd-veglogapi.herokuapp.com" target="blank">FULL CRUD PERN PROJECT</a></h2>
             </div>
             <div class="card-three">
@@ -89,7 +89,7 @@
 <hr style="border: 1px solid #394236;" />
     <footer class="footer">
         <div id="social-btns">
-            <a href="https://www.linkedin.com/in/brad-dozier-956a09a4/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/braddozier" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
             <a href="https://github.com/braddozier93/" target="_blank"><i class="fab fa-github fa-3x"></i></a>
             <a href="https://codepen.io/braddozier/" target="_blank"><i class="fab fa-codepen fa-3x"></i></a>
         </div>
