about me update

--- a/index.html
+++ b/index.html
@@ -34,15 +34,25 @@
     </div>
     <div id="aboout-content">
         <h1 class="header-tag">BRAD DOZIER</h1>
-        <h3 class="header-tag"><i>Aspiring Web Developer</i></h3>
-        <p>
-        Hello, and thanks for visiting my website! My name is Brad Dozier, and I am an aspiring web developer 
-        based in Indianapolis, Indiana. As a recent graduate of Eleven Fifty Academy's Web Development program, 
-        I have gained numerous technical skills which include using HTML, CSS, Javascript, and React. This, 
+        <h3 class="header-tag"><i>Web Developer | UX/UI Design Student</i></h3>
+        <p id="aboutMe">
+        Hello, my name is Brad Dozier, and I am an aspiring web developer 
+        based in Indianapolis, Indiana.
+        </p>
+        <p id="aboutMe">
+        As a recent graduate of Eleven Fifty Academy's Web Development program, 
+        I have gained numerous technical skills which include using HTML, CSS, Javascript. Throughout this course, I 
+        was also able to learn to build a full CRUD React application using the PERN stack. This, 
         however, is just the start of my career in web development in which I look forward to the challenge of 
         always continuing to learn and add to this skillset.
         </p>
-        <p>
+        <p id="aboutMe">
+        This desire to continue to learn and grow as a developer has also led me to further
+        my studies at Eleven Fifty, as I am currently enrolled in their UX/UI Design program. This program, 
+        in addition to what I learned in the Web Development program, should help me in the future to demonstrate a 
+        more refined aesthetic to the structure of any project I take on. 
+        </p>
+        <p  id="aboutMe">
         In addition to this expanding set of skills, my experience as a successful business owner and manager
         with over 20 years of experience in the service industry has also enhanced many of my "soft" skills and proven that I have 
         have the drive, dedication, & perseverence to be a successful addition to your team. 
