typo fix in about me

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p  id="aboutMe">
         In addition to this expanding set of skills, my experience as a successful business owner and manager
         with over 20 years of experience in the service industry has also enhanced many of my "soft" skills and proven that I have 
-        have the drive, dedication, & perseverence to be a successful addition to your team. 
+        have the drive, dedication, & perseverance to be a successful addition to your team. 
         </p>
     <a download href="Resume729.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
     </div>  
