styling and navbar changes

--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
     </li>
      <li><a href="#contact" class="nav-link">Contact</a></li>
       <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
-     <li><a href="#about" class="nav-link">About</a></li>
+      <li id="res"><a download href="Resume729.pdf" class="nav-link" target="_blank">Resume</button></a>
+      </li>
+     <li><a href="#about" class="nav-link">About Me</a></li>
   </ul>
 </nav>
 <header id="home">
- <!-- <h1 class="header-tag">Brad Dozier</h1> -->
- <!-- <h3 class="header-tag"><i>Web Development</i></h3> -->
+    <h1 class="header-tag">BRAD DOZIER</h1>
+    <h3 class="header-tag"><i>Web Developer | UX/UI Design Student</i></h3>
 </header>
 
 <div class="main">
   <section id="about">
     <div id="about-picture">
-      <img src="BradDozier3.jpg" width="300" height="400">
+      <img src="BradDozier3.jpg">
     </div>
     <div id="aboout-content">
-        <h1 class="header-tag">BRAD DOZIER</h1>
-        <h3 class="header-tag"><i>Web Developer | UX/UI Design Student</i></h3>
+        <h1 class="about-tag">About Me</h1>
         <p id="aboutMe">
         Hello, my name is Brad Dozier, and I am an aspiring web developer 
         based in Indianapolis, Indiana.
@@ -72,11 +73,11 @@
                 <h2><a href="https://codepen.io/braddozier/full/KKdqVmj" target="blank">CSS CREATURE</a></h2>
             </div>
             <div class="card-two">
-                <img src="VegLogThumbnail.png" alt="PERN-Project" class="img-thumbnail" width="300">
+                <img src="VegLogThumbnail.png" alt="PERN-Project" class="img-thumbnail">
                 <h2><a href="https://bd-veglogapi.herokuapp.com" target="blank">FULL CRUD PERN PROJECT</a></h2>
             </div>
             <div class="card-three">
-                <img src="SongsterrAPI.png" alt="APIproject" class="img-thumbnail">
+                <img src="SongsterrAPI.png" alt="API-project" class="img-thumbnail">
                 <h2><a href="https://braddozier93.github.io/APIproject/" target="blank">SONGSTER API</a></h2>
         </div>
     </div>
