--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
     <div id="aboout-content">
         <h1 class="about-tag">About Me</h1>
+        <hr id="hrtop"></hr>
         <p id="aboutMe">
         Hello, my name is Brad Dozier, and I am an aspiring web developer 
         based in Indianapolis, Indiana.
@@ -58,6 +59,7 @@
         with over 20 years of experience in the service industry has also enhanced many of my "soft" skills and proven that I have 
         have the drive, dedication, & perseverance to be a successful addition to your team. 
         </p>
+        <hr id="hrbot"></hr>
     <a download href="Resume729.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
     </div>  
   </section> <!--link to my resume somewhere via button or anchor link.....do it is js if possible-->    
@@ -69,15 +71,15 @@
         <h1 class="portfolio-tag">Portfolio</h1>
         <div class="portfolio-cards">
             <div class="card-one">
-                <img src="CSSCreatureThumbnail.png" alt="CSS-Creature" class="img-thumbnail">
+                <a href="https://codepen.io/braddozier/full/KKdqVmj" target="blank"><img src="CSSCreatureThumbnail.png" alt="CSS-Creature" class="img-thumbnail"></a>
                 <h2><a href="https://codepen.io/braddozier/full/KKdqVmj" target="blank">CSS CREATURE</a></h2>
             </div>
             <div class="card-two">
-                <img src="VegLogThumbnail.png" alt="PERN-Project" class="img-thumbnail">
+                <a href="https://bd-veglogapi.herokuapp.com" target="blank"><img src="VegLogThumbnail.png" alt="PERN-Project" class="img-thumbnail"></a>
                 <h2><a href="https://bd-veglogapi.herokuapp.com" target="blank">FULL CRUD PERN PROJECT</a></h2>
             </div>
             <div class="card-three">
-                <img src="SongsterrAPI.png" alt="API-project" class="img-thumbnail">
+                <a href="https://braddozier93.github.io/APIproject/" target="blank"><img src="SongsterrAPI.png" alt="API-project" class="img-thumbnail"></a>
                 <h2><a href="https://braddozier93.github.io/APIproject/" target="blank">SONGSTER API</a></h2>
         </div>
     </div>
