nav bar changes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="card-two">
                 <a href="https://bd-veglogapi.herokuapp.com" target="blank"><img src="VegLogThumbnail.png" alt="PERN-Project" class="img-thumbnail"></a>
-                <h2><a href="https://bd-veglogapi.herokuapp.com" target="blank">FULL CRUD PERN PROJECT</a></h2>
+                <h2><a href="https://bd-veglogapi.herokuapp.com" target="blank">PERN STACK PROJECT</a></h2>
             </div>
             <div class="card-three">
                 <a href="https://braddozier93.github.io/APIproject/" target="blank"><img src="SongsterrAPI.png" alt="API-project" class="img-thumbnail"></a>
@@ -84,7 +84,7 @@
         </div>
     </div>
     </section>
- <hr style="border: 1px solid #394236;" />
+ <hr style="border: 1px solid #394236" />
     <section id="contact">
         <!-- info:email and phone and links/form to contact me that will allow them to email directly from a button/ -->
         <h1 class="contact-tag">Contact Me</h1>
@@ -99,7 +99,7 @@
     </section>
 
 </div>
-<hr style="border: 1px solid #394236;" />
+<hr style="border: 1px solid #394236; " />
     <footer class="footer">
         <div id="social-btns">
             <a href="https://www.linkedin.com/in/braddozier" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
