--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </ul>
 </nav>
 <header id="home">
-    <h1 class="header-tag">BRAD DOZIER</h1>
-    <h3 class="header-tag"><i>Web Developer | UX/UI Design Student</i></h3>
+    <!-- <h1 class="header-tag">BRAD DOZIER</h1>
+    <h3 class="header-tag"><i>Web Developer | UX/UI Design Student</i></h3> -->
 </header>
 
 <div class="main">
