about me update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         more refined aesthetic to the structure of any project I take on. 
         </p>
         <p  id="aboutMe">
-        In addition to this expanding set of skills, my experience as a successful business owner and manager
+        In addition to this expanding set of skills and degrees in Marketing and Distribution Management, my experience as a successful business owner and manager
         with over 20 years of experience in the service industry has also enhanced many of my "soft" skills and proven that I have 
         have the drive, dedication, & perseverance to be a successful addition to your team. 
         </p>
