--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </li>
      <li><a href="#contact" class="nav-link">Contact</a></li>
       <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
-      <li id="res"><a download href="Resume729.pdf" class="nav-link" target="_blank">Resume</button></a>
+      <li id="res"><a download href="BradResume12282020.pdf" class="nav-link" target="_blank">Resume</button></a>
       </li>
      <li><a href="#about" class="nav-link">About Me</a></li>
   </ul>
@@ -60,7 +60,7 @@
         have the drive, dedication, & perseverance to be a successful addition to your team. 
         </p>
         <hr id="hrbot"></hr>
-    <a download href="Resume729.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
+    <a download href="BradResume12282020.pdf" target="_blank"><button type="button" class="viewResume">View My Resume</button></a>
     </div>  
   </section> <!--link to my resume somewhere via button or anchor link.....do it is js if possible-->    
 </div>
